# BONSAI-Research-Labs

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml
BONSAI Research Charter/: BONSAI-CANONICAL-PLAN-SEQUENTIAL-PROMPT-ROSTER.md  BONSAI-RESEARCH-CHARTER.md  OAK-EVIDENCE-AND-TRACEABILITY.md  PSPR-HANDOFF.md  README.md  STS-SESSION-HANDOFF.md
crates/bonsai-bundle/: Cargo.toml
crates/bonsai-bundle/migrations/: 0001_bundle_index.sql
crates/bonsai-bundle/src/: derivation.rs  index.rs  lib.rs  validation.rs
crates/bonsai-bundle/tests/: bundle_index_fixtures.rs  bundle_validation_corpus.rs  derivation_fixtures.rs  segment_fixtures.rs
crates/bonsai-claims/: Cargo.toml
crates/bonsai-claims/src/: lib.rs
crates/bonsai-contracts/: Cargo.toml  build.rs
crates/bonsai-contracts/examples/: event_descriptor.rs  event_roundtrip.rs
crates/bonsai-contracts/src/: adapter.rs  inventory.rs  lib.rs  lineage.rs  resource.rs  track.rs
crates/bonsai-contracts/tests/: adapter_protocol.rs
crates/bonsai-governor/: Cargo.toml
crates/bonsai-governor/src/: decision.rs  lib.rs  supervisor.rs  violation.rs
crates/bonsai-ingest/: Cargo.toml
crates/bonsai-ingest/src/: lib.rs  ordering.rs
crates/bonsai-ingest/tests/: ingest_validation.rs  ordering_semantics.rs
crates/bonsai-lineage/: Cargo.toml
crates/bonsai-lineage/src/: graph.rs  lib.rs
crates/bonsai-metrics/: Cargo.toml
crates/bonsai-metrics/src/: behavior.rs  lib.rs  resources.rs
crates/bonsai-platform/: Cargo.toml
crates/bonsai-platform/src/: calibration.rs  clock.rs  lib.rs  portable.rs
crates/bonsai-platform/tests/: portable_accounting.rs
crates/bonsai-report/: Cargo.toml
crates/bonsai-report/src/: lib.rs  viewer.rs
crates/bonsai-runtime/: Cargo.toml
crates/bonsai-runtime/src/: conformance.rs  isolation.rs  lib.rs  lifecycle.rs  replay.rs
crates/bonsai-runtime/tests/: adapter_conformance.rs  agent_isolation.rs  process_transport.rs
crates/bonsai-xtask/: Cargo.toml
crates/bonsai-xtask/src/: main.rs  schema_check.rs
crates/bonsai-xtask/tests/: bundle_validator_cli.rs  verification_fixture.rs
docs/architecture/: ADAPTER-CONFORMANCE.md  ADAPTER-PROTOCOL.md  AGENT-OBSERVER-ISOLATION.md  ANALYTICAL-DERIVATION-CONTRACT.md  ARTIFACT-LIFECYCLE-REGISTRY.md  BASIC-SUPERVISED-BUDGET-LOOP.md  BUDGET-ARITHMETIC-AND-SCOPES.md  BUNDLE-INDEX-AND-BLOBS.md  BUNDLE-VALIDATION-AND-MIGRATIONS.md  CLOCK-CALIBRATION-AND-DEADLINES.md  EVENT-INGESTION-VALIDATION.md  EVENT-ORDERING.md  EVENT-SEGMENT-FORMAT.md  GOVERNOR-ADMISSION-DECISIONS.md  GOVERNOR-VIOLATION-LIFECYCLE.md  LINEAGE-GRAPH-AND-QUERIES.md  MEASUREMENT-CALIBRATION.md  OBSERVER-ONLY-REPLAY.md  PORTABLE-RESOURCE-ACCOUNTING.md  PROCESS-TRANSPORT.md  RESOURCE-SAMPLE-INTERFACE.md  RUN-LIFECYCLE-AND-RECOVERY.md  SCENARIO-PROTOCOL.md
docs/architecture/adr/: 0001-repository-and-publication-boundary.md  0002-runtime-and-process-boundary.md  0003-storage-schema-and-reporting.md  0004-packaging-and-offline-reproducibility.md  0005-platform-and-measurement-policy.md  0006-statistics-and-resource-profiles.md  0007-reference-science-and-attribution.md  README.md
docs/claims/: RULE-ENGINE.md
docs/experiments/: M1-HEARTBEAT.md
docs/governance/: CLAIM-TO-EVIDENCE-MATRIX.md  PARKED-SCOPE-LEDGER.md  PUBLICATION-POLICY.md  RISK-AND-BLOCKER-REGISTER.md  SOURCE-OF-TRUTH.md  TERMINOLOGY-AND-UNITS.md
docs/governance/addenda/: 2026-07-18-public-repository-target.md  2026-07-19-later-pspr-source-publication.md
docs/metrics/: PRIMARY-BEHAVIOR-METRICS.md  REGISTRY.md  RESOURCE-AND-OVERHEAD-METRICS.md
docs/reference/: PRIMITIVE-CONTROL-ADAPTER.md
docs/reporting/: LOCAL-VIEWER.md  STATIC-REPORT.md
docs/sessions/: BONSAI-DEVLOG.md
docs/verification/: BONSAI-VERIFICATION-LOG.md  M0-CHECKPOINT.md  TEST-MATRIX.md  VERIFICATION-RECORD-V1.md
evidence/verification/: records.jsonl
evidence/verification/artifacts/: BC-01-1784427333002204600.stderr.txt  BC-01-1784427333002204600.stdout.txt  BC-01-1784427540937208400.stderr.txt  BC-01-1784427540937208400.stdout.txt  BC-02-1784428511706744200.stderr.txt  BC-02-1784428577885004300.stderr.txt  BC-02-1784428626815212000.stderr.txt  BC-02-1784428626815212000.stdout.txt  BC-03-1784430332012813700.stderr.txt  BC-03-1784430332012813700.stdout.txt  BC-03-1784430432949968400.stderr.txt  BC-03-1784430432949968400.stdout.txt  BC-04-1784431710849423900.stderr.txt  BC-04-1784431710849423900.stdout.txt  BC-05-1784432466868264500.stderr.txt  BC-05-1784432466868264500.stdout.txt  BC-06-1784434376427187100.stderr.txt  BC-06-1784434376427187100.stdout.txt  BC-06-1784434446640612000.stderr.txt  BC-06-1784434446640612000.stdout.txt  BC-06-1784434736275348400.stderr.txt  BC-06-1784434736275348400.stdout.txt  BC-07-1784448859471416000.stderr.txt  BC-07-1784448872886496000.stderr.txt  BC-07-1784448872886496000.stdout.txt  BC-08-1784449953957691900.stderr.txt  BC-08-1784449953957691900.stdout.txt  BC-09-1784451381921850200.stderr.txt  BC-09-1784451458102382400.stderr.txt  BC-09-1784451458102382400.stdout.txt  BC-10-1784470096942208100.stderr.txt  BC-10-1784470096942208100.stdout.txt  BC-11-1784471649324168400.stderr.txt  BC-11-1784471649324168400.stdout.txt  BC-12-1784473567251415900.stderr.txt  BC-12-1784473635637114200.stderr.txt  BC-12-1784473635637114200.stdout.txt  (+97 more)
fixtures/bundle-validation/: expected-outcomes.json
fixtures/m1-heartbeat/: expected-summary.json
proto/: README.md
scenarios/stable-values-v1/: scenario.json
schemas/: README.md  bundle-manifest-v1.json  bundle-validation-report-v1.json  claim-result-v1.json  experiment-manifest-v1.json  metric-estimate-v1.json  metric-spec-v1.json  metric-uncertainty-v1.json  platform-inventory-v1.json  resource-policy-v1.json  track-declaration-v1.json
schemas/registry/: terminology-v1.json
scripts/: check_adrs.py  check_ci.py  check_docs.py  check_governance_ledgers.py  check_license.py  check_m0.py  check_m1_equivalence.py  check_terminology.py  write_ci_evidence.py
(+61 files in other folders)
