[workspace]
members = [
    "crates/bonsai-bundle",
    "crates/bonsai-claims",
    "crates/bonsai-contracts",
    "crates/bonsai-governor",
    "crates/bonsai-ingest",
    "crates/bonsai-lineage",
    "crates/bonsai-metrics",
    "crates/bonsai-platform",
    "crates/bonsai-report",
    "crates/bonsai-runtime",
    "crates/bonsai-xtask",
]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/USS-Parks/BONSAI-Research-Labs"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
