[package]
name = "bonsai-bundle"
description = "Append-only BONSAI event segment storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
sha2 = "0.11.0"

[dev-dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
