[package]
name = "bonsai-bundle"
description = "Append-only BONSAI event segment storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
arrow-array = "59.1.0"
arrow-schema = "59.1.0"
bonsai-contracts = { path = "../bonsai-contracts" }
jsonschema = { version = "0.48.1", default-features = false }
parquet = { version = "59.1.0", default-features = false, features = ["arrow"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"

[dev-dependencies]
tempfile = "3.27.0"
