[package]
name = "bonsai-claims"
description = "Versioned claim-ladder adjudication rules for BONSAI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.229", features = ["derive"] }
