[package]
name = "bonsai-contracts"
description = "Versioned BONSAI wire contracts and validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
prost = "0.14.4"
sha2 = "0.11.0"

[build-dependencies]
prost-build = "0.14.4"
protoc-bin-vendored = "3.2.0"
