[package]
name = "bonsai-governor"
description = "Deterministic external resource budget governor for BONSAI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bonsai-contracts = { path = "../bonsai-contracts" }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
