[package]
name = "bonsai-metrics"
description = "Versioned deterministic metric registry and engine for BONSAI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bonsai-platform = { path = "../bonsai-platform" }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
