[package]
name = "bonsai-platform"
description = "Platform-neutral BONSAI resource measurement contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.229", features = ["derive"] }
