[package]
name = "bonsai-report"
description = "Offline static reports for BONSAI evidence bundles"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.149"
