[package]
name = "bonsai-runtime"
description = "Bounded BONSAI child-process transport and supervisor runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
prost = "0.14.4"
