[package]
name = "bonsai-runtime"
description = "Bounded BONSAI child-process transport and supervisor runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bonsai-bundle = { path = "../bonsai-bundle" }
bonsai-contracts = { path = "../bonsai-contracts" }
bonsai-ingest = { path = "../bonsai-ingest" }
bonsai-metrics = { path = "../bonsai-metrics" }
bonsai-report = { path = "../bonsai-report" }
prost = "0.14.4"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"

[dev-dependencies]
tempfile = "3.27.0"
