[package]
name = "bonsai-xtask"
description = "Repository-local BONSAI governance and verification tasks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bonsai-contracts = { path = "../bonsai-contracts" }
jsonschema = { version = "0.48.1", default-features = false }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
